# scorpio_zadanie_rekrutacyjne_software

./: .gitignore  CMakeLists.txt  CPPLINT.cfg  README.md  package.xml
example_package/: CMakeLists.txt  package.xml
example_package/launch/: example_node.launch.xml
example_package/src/: example_node.cpp
include/: autonomy_simulator.hpp  map_generation.hpp  utils.hpp
include/virtual_dc_motor/: virtual_dc_motor.hpp
launch/: autonomy_simulator.launch  cube_detector_node.launch.xml  virtual_dc_motor.launch
msg/: RoverMap.msg  RoverPose.msg  SetGoal.msg
simulation_endpoint/: package.xml  setup.cfg  setup.py
simulation_endpoint/launch/: endpoint.launch.py
simulation_endpoint/simulation_endpoint/: client.py  default_server_endpoint.py  server.py  service.py  steering.py  subscriber.py
src/: autonomy_simulator.cpp  cube_detector_node.cpp  echo_node.cpp  main.cpp  map_generation.cpp  utils.cpp  virtual_dc_motor.cpp
srv/: GetMap.srv  getMotorJointsLengths.srv
test/: CMakeLists.txt  map_generation_test.cpp
