<?xml version="1.0"?>
<package format="2">
  <name>virtual_dc_motor</name>
  <description>Scorpio recruitment task</description>
  <version>1.0.0</version>
  <maintainer email="projekt@scorpio.pwr.edu.pl">projekt_scorpio</maintainer>
  <license>MIT</license>
  <exec_depend>message_runtime</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <export>
  </export>
</package>
