<?xml version="1.0"?>
<package format="3">
  <name>scorpio_zadanie_rekrutacyjne_software</name>
  <version>0.0.0</version>
  <description>
    ROS2 package for the recruitment task of Project Scorpio.
  </description>
  <maintainer email="projekt@scorpio.pwr.edu.pl">Project Scorpio</maintainer>
  <license>Proprietary</license>
  <author email="projekt@scorpio.pwr.edu.pl">Mariusz Rychlicki</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>rclcpp_components</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
