<?xml version="1.0"?>
<package format="3">
  <name>example_package</name>
  <version>0.0.0</version>
  <description>
    Przykładowa paczka ROS2
  </description>
  <maintainer email="xxx@gmail.com">Project Scorpio</maintainer>
  <license>Proprietary</license>
  <author email="xxx@gmail.com">Łukasz Kuś</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <build_depend>rclcpp</build_depend>
  <build_depend>rclcpp_components</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>std_srvs</build_depend>

  <exec_depend>rclcpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>std_srvs</exec_depend>

  <test_depend>ament_lint_auto</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
